--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/dayuoba/FirstIM_for_LNUT",
   "dependencies": {
+    "ejs": "^2.3.1",
     "express": "^4.12.3",
+    "log4js": "^0.6.22",
     "socket.io": "^1.3.5"
   }
 }
