--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/dayuoba/FirstIM_for_LNUT",
   "dependencies": {
+    "body-parser": "^1.12.2",
+    "cookie-parser": "^1.3.4",
     "ejs": "^2.3.1",
     "express": "^4.12.3",
     "log4js": "^0.6.22",
